# felicity-lims

./: .deepsource.toml  .dockerignore  .env  .env.production  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  Dockerfile.aio  Dockerfile.dev  Dockerfile.frontend  Dockerfile.prod  Dockerfile.webapp  Procfile  README.md  Untitled.ipynb  al_revision.sh  al_upgrade.sh  alembic.ini  apollo.config.js  apollo.config.json  codegen.yml  css.py  dc.aio.prod.yml  dc.back-end.yaml  dc.caddy.prod.yaml  dc.dev.yaml  dc.nginx.dev.yaml  dc.nginx.prod.yaml  dc.traefik.dev.yaml  dc.traefik.prod.yaml  docker-compose.alt.aio.yml  docker-compose.alt.standard copy.yml  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.other.yml  docker-compose.prod.aio.yml  docker-compose.prod.native.yml  docker-compose.prod.split.yaml  docker-compose.prod.yaml  (+40 more)
backend/felicity_lims/: .gitignore  Procfile  al_upgrade.sh  alembic.rm  data.csv  felicity.sh  migrate.sh  pyproject.toml  requirements.txt  requirements.txt_bck  runApp.py  runserver.sh  runuvicorn.sh  tests-start.sh  worker-prestart.sh  worker-start.sh
backend/felicity_lims/alembic/: env.py
backend/felicity_lims/alembic/versions/: 0261a24a4c16_ini_felicity_tue_jan_5_11_01_30_utc_2021.py  0552e86b4918_added_qc_dpt_fkey.py  09e2d053c0e1_ini_felicity_sat_mar_27_08_21_56_utc_.py  0d4a032b7ad8_ws_uid_nulab_e.py  0d5a6d453ad9_reset_revisions.py  0e30436eeefb_changed_ws_to_map_to_analysis_result.py  0efaa896c1a0_ini_felicity_sat_mar_27_08_21_28_utc_.py  154fc4f2bda8_trial_2.py  2183bf752222_ini_felicity_sat_mar_27_08_22_39_utc_.py  27a65413f177_added_reportable_internal_use_and_sort_.py  27c1bc5dedec_added_qc_templatetable.py  281ce8e37b58_ini_felicity_mon_nov_30_13_33_46_utc_.py  444b8ca7bd6c_init_revision.py  (+56 more)
backend/felicity_lims/felicity/: backend_pre_start.py  main.py  worker.py
backend/felicity_lims/migrations/: env.py
backend/felicity_lims/scripts/: format.sh  lint.sh  test.sh
(+14013 files in other folders)
